# tic-tac-toe-ai

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/tic-tac-toe/: app.py  controller.py  event.py  model.py  view.py
src/tic-tac-toe/game/: __init__.py  bencher.py
src/tic-tac-toe/game/strategy/: __init__.py  alpha_beta.py  human.py  mcts.py  random.py
