[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["yaumu3 <yumu@me.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

[tool.poetry.dev-dependencies]
isort = {extras = ["pyproject"], version = "^5.9.3"}
black = "^21.9b0"
rope = "^0.19.0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
